移除打印堆栈，可以选择直接使用开源库，比如boost-stacktrace，完善文档

--- a/doc/latex/annotated.tex
+++ b/doc/latex/annotated.tex
@@ -15,7 +15,7 @@ Here are the classes, structs, unions and interfaces with brief descriptions\+:\
 \item\contentsline{section}{\hyperlink{classdaq_1_1LocationInfo}{daq\+::\+Location\+Info} }{\pageref{classdaq_1_1LocationInfo}}{}
 \item\contentsline{section}{\hyperlink{structdaq_1_1LogConfigStruct}{daq\+::\+Log\+Config\+Struct} \\*配置log的结构体，包含所有能够配置的选项 }{\pageref{structdaq_1_1LogConfigStruct}}{}
 \item\contentsline{section}{\hyperlink{classdaq_1_1LogConfigurator}{daq\+::\+Log\+Configurator} \\*能够配置log的类 }{\pageref{classdaq_1_1LogConfigurator}}{}
-\item\contentsline{section}{\hyperlink{classdaq_1_1LogEvent}{daq\+::\+Log\+Event} }{\pageref{classdaq_1_1LogEvent}}{}
+\item\contentsline{section}{\hyperlink{classdaq_1_1LogEvent}{daq\+::\+Log\+Event} \\*日志事件 }{\pageref{classdaq_1_1LogEvent}}{}
 \item\contentsline{section}{\hyperlink{classdaq_1_1Logger}{daq\+::\+Logger} }{\pageref{classdaq_1_1Logger}}{}
 \item\contentsline{section}{\hyperlink{classdaq_1_1LoggerFactory}{daq\+::\+Logger\+Factory} \\*同步\+Logger工厂 }{\pageref{classdaq_1_1LoggerFactory}}{}
 \item\contentsline{section}{\hyperlink{classdaq_1_1LoggerNameFormatItem}{daq\+::\+Logger\+Name\+Format\+Item} }{\pageref{classdaq_1_1LoggerNameFormatItem}}{}
