--- a/doc/latex/classdaq_1_1LogEvent.tex
+++ b/doc/latex/classdaq_1_1LogEvent.tex
@@ -1,5 +1,14 @@
 \hypertarget{classdaq_1_1LogEvent}{}\section{daq\+:\+:Log\+Event Class Reference}
 \label{classdaq_1_1LogEvent}\index{daq\+::\+Log\+Event@{daq\+::\+Log\+Event}}
+
+
+日志事件  
+
+
+
+
+{\ttfamily \#include $<$logevent.\+hpp$>$}
+
 \subsection*{Public Types}
 \begin{DoxyCompactItemize}
 \item 
@@ -52,6 +61,9 @@ static std\+::string {\bfseries get\+Fiber\+Id} ()
 static uint64\+\_\+t {\bfseries get\+Time} ()
 \end{DoxyCompactItemize}
 
+
+\subsection{Detailed Description}
+日志事件 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
