--- a/doc/latex/classdaq_1_1LocationInfo.tex
+++ b/doc/latex/classdaq_1_1LocationInfo.tex
@@ -35,7 +35,8 @@ static const \hyperlink{classdaq_1_1LocationInfo}{Location\+Info} \& \hyperlink{
 \subsection*{Static Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
-static const char $\ast$const \hyperlink{classdaq_1_1LocationInfo_aea318a7eecc96e89ac2470810071111c}{NA}
+\mbox{\Hypertarget{classdaq_1_1LocationInfo_aea318a7eecc96e89ac2470810071111c}\label{classdaq_1_1LocationInfo_aea318a7eecc96e89ac2470810071111c}} 
+static const char $\ast$const {\bfseries NA}
 \item 
 \mbox{\Hypertarget{classdaq_1_1LocationInfo_a9a9d0810de543046a08104e5135b6e91}\label{classdaq_1_1LocationInfo_a9a9d0810de543046a08104e5135b6e91}} 
 static const char $\ast$const {\bfseries N\+A\+\_\+\+M\+E\+T\+H\+OD}
@@ -57,15 +58,6 @@ get\+Location\+Unavailable 不使用\+Location\+Info时的位置信息
 \hyperlink{classdaq_1_1LocationInfo}{Location\+Info} 
 \end{DoxyReturn}
 
-
-\subsection{Member Data Documentation}
-\mbox{\Hypertarget{classdaq_1_1LocationInfo_aea318a7eecc96e89ac2470810071111c}\label{classdaq_1_1LocationInfo_aea318a7eecc96e89ac2470810071111c}} 
-\index{daq\+::\+Location\+Info@{daq\+::\+Location\+Info}!NA@{NA}}
-\index{NA@{NA}!daq\+::\+Location\+Info@{daq\+::\+Location\+Info}}
-\subsubsection{\texorpdfstring{NA}{NA}}
-{\footnotesize\ttfamily const char$\ast$ const daq\+::\+Location\+Info\+::\+NA\hspace{0.3cm}{\ttfamily [static]}}
-
-得不到文件名或行号就返回空 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
 \item 
